Added gameover and reset
Added GameOver, reset, wpm count, changed colour theme

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
             <div id="header">
                 <div id="info">
-                    30
+                    
                 </div>
                 <div id="buttons">
-                    <button>New Game</button>
+                    <button id="newGameBtn">New Game</button>
                 </div>
             </div>
 
